OOA11Y - fix missing color change on text-pink

--- a/_lib/solid-helpers/_variables.scss
+++ b/_lib/solid-helpers/_variables.scss
@@ -86,7 +86,7 @@ $text-gray:            #222    !default;
 $text-gray-lighter:    #666    !default;
 $text-gray-lightest:   #757575 !default;
 $text-red:             #e32    !default;
-$text-pink:            #f43192 !default;
+$text-pink:            #e40c78 !default;
 $text-orange:          #f47f16 !default;
 $text-promoted-orange: #f7ad19 !default;
 $text-purple:          #6645dd !default;
